2013-03-12: Jesse Kornblum <research@jessekornblum.com>:

	* Changelog: Spelled my own name correctly.
	* fuzzy.c: Fixed memory leak, bug 3607641.

2012-07-23: Jesse Kornblum <research@jessekornblum.com>:

	* main.cpp, match.cpp: Renamed the match_pretty function for clarity.
	
2012-07-17: Jesse Kornblum <research@jessekornblum.com>:

	* match.cpp: Fixing bugs in matching, clustering modes
	* main.cpp: Clarifying comments. Added sanity check for -c, -g

2012-07-16: Jesse Kornblum <research@jessekornblum.com>:

	* filedata.cpp: Added includes for *nix compilation

2012-07-14 Jesse Kornblum <research@jessekornblum.com>:

	* win.sh: Updated for C++ compiler warnings
	* normal.sh: Updated for C++ compiler warnings
	* fuzzy.c: Corrected logic error for when sigs don't have filenames
	* ui.cpp: Added const to print_error's state variable
	* match.cpp: Rewrote to use Filedata class
	* filedata.cpp: Created Filedata class
	* main.cpp: Adapted to use Filedata class

2012-07-13 Jesse Kornblum <research@jessekornblum.com>:

	* fuzzy.c: Fixed major bug regarding incorrect match scores for hashes with long filenames
	* dig.cpp: Added warning message when not all data on stdin was hashed. Also increased stdin buffer to 512MB.
	* configure.ac: Version bump to 2.9.
	* main.cpp: Added flags for clustering mode
	* ssdeep.h: Added flags for clustering mode
	* match.cpp: Setting up for clustering mode
	
2012-05-25 Jesse Kornblum <research@jessekornblum.com>:

	* main.cpp: Updated command line argument processing
	* ssdeep.1: Clarifications on description.

2012-05-24 Jesse Kornblum <research@jessekornblum.com>:

	* match.cpp: Convert to C++

2012-04-24 Jesse Kornblum <research@jessekornblum.com>:
	
	* ssdeep.1: Updating support for stdin, clarifying modes
        * Makefile.am: LF to CR/LF change now done by zip program
	* ssdeep.h: Adding Doxygen comments
	* match.cpp: Fixed bug in Win32 filename construction
	* fuzzy.h: Cleanup and commenting
	* engine.cpp: Added const definitions